# loading-pkg

./: LICENSE  README.md  setup.cfg  setup.py
loading_pkg_silas_hw.egg-info/: PKG-INFO
src/load_anim.egg-info/: PKG-INFO  SOURCES.txt
src/load_animate.egg-info/: PKG-INFO  SOURCES.txt
src/loadanim/: __init__.py  loadanim.py
src/loadanim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/loading.egg-info/: PKG-INFO  SOURCES.txt
src/loading_pkg_silas_hw.egg-info/: PKG-INFO  SOURCES.txt
