[metadata]
name = loading-pkg-silas-hw
version = 1.0
author = Silas Hayes-Williams
author_email = silas.hayes.williams@gmail.com
description = Displays animated loading text to the terminal
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/silas-hw/loading-pkg
project_urls =
    Bug Tracker = https://github.com/silas-hw/loading-pkg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System : OS Independent 

[options]
package dir =
    = src
packages = find:
python_requires >= 3.0

[options.packages.find]
where = src